@@ -30,7 +30,7 @@ Allow to pause playing on AY Player
 Improved Keyboard Help: now you can press keys by clicking mouse
 Allow to not save configuration when exiting ZEsarUX
 Allow to select normal ZEsarUX logo or X Anniversary logo
-Allow to seng ZENG snapshots more frequently (even every 20 ms)
+Allow to send ZENG snapshots more frequently (even every 20 ms)
 Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext
 Allow autorewind setting for real tape too
 Allow to disable Spectrum colours on real video mode too
@@ -79,6 +79,8 @@ Fixed ZX Vision:
 - Fixed splash messages when background windows are enabled
 - Fixed initial position for many windows
 
+Fixed segfault when trying to insert an unexistent Real Tape file
+Fixed segfault inserting a ZX81 Real Tape and opening Tape Viewer
 Fixed invalid Data Bus value on Jupiter Ace (it's 20H instead of FFH)
 Fixed blockage when drawing Text Adventure Map and corrupted GAC adventure
 Fixed timings of opcodes CP (HL), CP (IX+d), CP (IY+d)
